--- a/sensor-app/package.json
+++ b/sensor-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "@mui/x-date-pickers": "^6.17.0",
     "axios": "^1.6.0",
