--- a/packages/mqtt-client-service/package.json
+++ b/packages/mqtt-client-service/package.json
@@ -9,8 +9,9 @@
     "dev": "nodemon src/index.ts",
     "typeorm:generate": "npx typeorm-ts-node-esm migration:generate -d src/db/data-source.ts",
     "typeorm:migrate": "npx typeorm-ts-node-esm migration:run -d src/db/data-source.ts",
-    "typeorm:revert": "npx typeorm-ts-node-esm migration:revert -d src/db/data-source.ts",
-    "typeorm:drop": "npx typeorm-ts-node-esm schema:drop -d src/db/data-source.ts"
+    "typeorm:revert": "npx typeorm-ts-node-esm migration:revert -d src/db/data-source.*",
+    "typeorm:drop": "npx typeorm-ts-node-esm schema:drop -d src/db/data-source.ts",
+    "typeorm:migrate:prod": "npx typeorm migration:run -d src/db/data-source.js"
   },
   "author": "",
   "license": "ISC",
