Add settings to select topic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       dockerfile: dockerfile
     environment:
       - NODE_ENV=production
+      - MQTT_HOST=decentservice.xyz
     depends_on:
       - postgres
     ports:
