--- a/packages/mqtt-client-service/envs/development.env
+++ b/packages/mqtt-client-service/envs/development.env
@@ -4,7 +4,7 @@ MQTT_HOST=decentservice.xyz
 
 NODE_ENV=development
 
-DB_HOST=localhost
+DB_HOST=172.17.0.2
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
